Bug fix: Horizontal card align, round temp number | Add the country | Style the switch for dark mode

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -2,12 +2,23 @@
     box-sizing: border-box;
 }
 
+:root{
+    --backgroundColor : #eeeeee;
+    --textColor : #2c3e50;
+    --borderInputColor : rgba(44, 62, 80, 0.2);
+    --warningColor: rgb(219, 92, 92);
+    --borderCardColor: rgba(255,255,255, 0.2);
+    --upperShadowColor: rgba(255,255,255, 0.83);
+    --bottomShadowColor: rgba(209, 205, 199, 0.51);
+    --green: #42b983;
+}
+
 html{
     height: 100%;
 }
 
 body{
-    background-color: #eeeeee;
+    background-color: var(--backgroundColor);
     min-height: 100%;
 }
 
@@ -16,7 +27,7 @@ body{
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     text-align: center;
-    color: #2c3e50;
+    color: var(--textColor);
   }
   
   #nav {
@@ -28,36 +39,33 @@ body{
   
     a {
       font-weight: bold;
-      color: #2c3e50;
+      color: var(--textColor);
       text-decoration: none;
       text-transform: uppercase;
   
       &.router-link-exact-active {
-        color: #42b983;
+        color: var(--green);
       }
 
     }
   }
 
-.home{
-    margin: 100px;
-}
-
 .input-container{
     display: flex;
     justify-content: center;
     align-items: center;
+    padding-top: 100px;
 }
 
 .input{
     background: transparent;
-    border: 1px solid rgba($color: #2c3e50, $alpha: 0.2);
+    border: 1px solid var(--borderInputColor);
     border-right-width: 0;
     padding: 10px 18px;
     border-radius: 40px 0 0 40px;
     font-size: 1.3em;
     outline: none;
-    color: #2c3e50;
+    color: var(--textColor);
     text-align: center;
 }
 
@@ -72,11 +80,12 @@ body{
 .card{
     text-align: left;
     width: 380px;
-    padding: 12px;
+    max-width: 80%;
+    padding: 10px;
     position: relative;
     border-radius: 12px;
-    border: 1px solid rgba($color: #fff, $alpha: 0.2);
-    box-shadow: 6px 6px 16px 0 rgba(209, 205, 199, 0.5), -6px -6px 26px 0 rgba(255, 255, 255, 0.8)  ;
+    border: 1px solid var(--borderCardColor);
+    box-shadow: 6px 6px 16px 0 var(--bottomShadowColor), -6px -6px 26px 0 white;
     .mainInfo{
         display: flex;
         align-items: center;
@@ -98,15 +107,15 @@ body{
 }
 
 .errorMsg{
-    color: rgb(219, 92, 92);
+    color: var(--warningColor);
     font-size: 1.4em;
     font-weight: 700;
 }
 
 .searchButton{
-    background-color: #42b983;
+    background-color: var(--green);
     color: #fff;
-    border: 1px solid rgba($color: #2c3e50, $alpha: 0.2);
+    border: 1px solid var(--borderInputColor);
     border-left-width: 0;
     border-radius: 0 40px 40px 0;
     padding: 9.25px 18px 9.25px 12px;
@@ -121,7 +130,60 @@ body{
     text-align: center;
     padding: 0 30px ;
     .title{
-        color: #42b983
+        color: var(--green)
     }
 }
 
+.switchRadio{
+    text-align: right;
+    margin-right: 30px;
+}
+
+.radio-switch{
+    display: inline-flex;
+    list-style: none;
+    padding: 4px;
+    border-radius: 50em;
+    border: 1px solid var(--borderInputColor);
+}
+
+.radio-switch__input{
+    display: none;
+    &:checked ~ .radio-switch__marker {
+        transform: translateX(100%);
+    }
+    &:checked ~ .radio-switch__label {
+        color: var(--backgroundColor)
+    }
+}
+
+.radio-switch__item{
+    position: relative;
+    width: 40px;
+    padding: 6px;
+}
+
+.radio-switch__label{
+    position: relative;
+    z-index: 1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    color: var(--textColor);
+    // line-height: 1.8em;
+    padding: 2px;
+    cursor: pointer;
+    transition: color 0.4s;
+}
+
+.radio-switch__marker{
+    position: absolute;
+    top: 0;
+    left: -100%;
+    width: 100%;
+    height: 100%;
+    background-color: var(--textColor);
+    border-radius: 50em;
+    transition: transform 0.4s;
+}
